--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kimageannotator
-url = https://github.com/ksnip/kImageAnnotator/archive/refs/tags/v0.6.0.tar.gz
+url = https://github.com/ksnip/kImageAnnotator/archive/v0.7.0/kImageAnnotator-0.7.0.tar.gz
 archives = 
 giturl = https://github.com/ksnip/kImageAnnotator.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
@@ -19,6 +21,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -57,8 +61,10 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
