--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kimageannotator
-url = https://github.com/ksnip/kImageAnnotator/archive/v0.7.0/kImageAnnotator-0.7.0.tar.gz
+url = https://github.com/ksnip/kImageAnnotator/archive/v0.7.1/kImageAnnotator-0.7.1.tar.gz
 archives = 
 giturl = https://github.com/ksnip/kImageAnnotator.git
 domain = 
@@ -16,7 +16,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -62,7 +62,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for apx
-use_apx = true
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
